@@ -8,6 +8,7 @@ import org.junit.After;
 import org.junit.Before;
 import org.junit.Test;
 
+import java.util.Arrays;
 import java.util.HashMap;
 import java.util.List;
 
@@ -37,7 +38,7 @@ public class Dm84Test {
 
     @Test
     public void detailContent() throws Exception {
-        System.out.println(dm84.detailContent(List.of("4129.html")));
+        System.out.println(dm84.detailContent(Arrays.asList("4129.html")));
     }
 
     @Test
