@@ -8,6 +8,7 @@ import org.junit.After;
 import org.junit.Before;
 import org.junit.Test;
 
+import java.util.Arrays;
 import java.util.HashMap;
 import java.util.List;
 
@@ -27,7 +28,7 @@ public class Dy555Test {
 
     @Test
     public void detailContent() throws Exception {
-        System.out.println(dy555.detailContent(List.of("425288")));
+        System.out.println(dy555.detailContent(Arrays.asList("425288")));
     }
 
     @Test
